<resources>
    <string name="app_name">CameraCV</string>
    <string name="version" />
    <string name="CameraArea" />
    <string name="Gray">Gray</string>
    <string name="Color">Color</string>
    <string name="ColorBitwise">ColorBitwise</string>
    <string name="GrayBitwise">GrayBitwise</string>
    <string name="Binalization">Binalization</string>
    <string name="GaussianBlur">GaussianBlur</string>
    <string name="MedianBlur">MedianBlur</string>
    <string name="BilateralFilter">Bilateral Filter</string>
    <string name="BoxFilter">Box Filter</string>
    <string name="CameraMode" />
    <string name="Parameter">Set Parameter</string>
    <string name="Help">Help</string>
    <string name="AppName" />
    <string name="Description">This app is able to view some variation of Image</string>
    <string name="AppVersion">1.0.0</string>
    <string name="TextAppVersion">Version</string>
    <string name="ksize_width">ksize ( width)</string>
    <string name="ksize_height">ksize ( height)</string>
    <string name="GaussianKsizeWidth">0</string>
    <string name="GaussianKsizeHeight">0</string>
    <string name="ButtonParameter">Change Parameter</string>
    <string name="GsigmaX">1.0</string>
    <string name="GsigmaY">1.0</string>
    <string name="string_GsigmaX">SigmaX</string>
    <string name="string_GsigmaY">SigmaY</string>
    <string name="nameMedian">Median</string>
    <string name="ksize_median">ksize ( Median )</string>
    <string name="MedianKsize">0</string>
    <string name="nameBox">Box</string>
    <string name="name_BoxKsizewidth">ksize( width )</string>
    <string name="BoxKsizeWidth">0</string>
    <string name="name_BoxKsizeheight">ksize( height )</string>
    <string name="BoxKsizeHeight">0</string>
    <string name="name_binalization">Binalization</string>
    <string name="name_threshold">threshold</string>
    <string name="TextParameter">No</string>
    <string name="name_detection">Detection Mode</string>
    <string name="name_RadioButtonOn">ON</string>
    <string name="name_RadioButtonOff">OFF</string>
    <string name="name_Bitwise">Bitwise( gray)</string>
    <string name="name_ChoiceButton">GO</string>
    <string name="name_combination">Choice Multiple</string>
    <string name="name_Reset">Reset</string>
</resources>