<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <org.opencv.android.JavaCamera2View
        android:id="@+id/camera_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:fadeScrollbars="false"
        android:longClickable="false"
        android:rotation="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:show_fps="true" />

    <TextView
        android:id="@+id/txtversion"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="90dp"
        android:breakStrategy="simple"
        android:text="@string/version"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/camera_view"
        app:layout_constraintEnd_toStartOf="@+id/textMode"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="OpenCV version: " />

    <TextView
        android:id="@+id/textMode"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/CameraMode"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="@+id/camera_view"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Mode : " />

    <TextView
        android:id="@+id/TextViewParameter"
        android:layout_width="500dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:text="@string/TextParameter"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textMode"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>